syntax.output
Grammar

    0 $accept: program $end

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | /* empty */

    4 global_declaration: typedef_declaration
    5                   | enum_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 typedef_declaration: TYPEDEF typename listspec ID dims SEMI
   11                    | TYPEDEF typename listspec ID error SEMI

   12 typename: standard_type
   13         | ID

   14 standard_type: CHAR
   15              | INT
   16              | FLOAT
   17              | STRING
   18              | VOID

   19 listspec: LIST
   20         | /* empty */

   21 dims: dims dim
   22     | /* empty */

   23 dim: LBRACK ICONST RBRACK
   24    | LBRACK RBRACK

   25 enum_declaration: ENUM ID enum_body SEMI
   26                 | ENUM ID error SEMI

   27 enum_body: LBRACE id_list RBRACE
   28          | LBRACE error RBRACE

   29 id_list: id_list COMMA ID initializer
   30        | error COMMA ID initializer
   31        | ID initializer

   32 initializer: ASSIGN init_value
   33            | /* empty */

   34 init_value: expression
   35           | LBRACE init_values RBRACE
   36           | LBRACE error RBRACE

   37 expression: expression OROP expression
   38           | error OROP expression
   39           | expression ANDOP expression
   40           | error ANDOP expression
   41           | expression EQUOP expression
   42           | error EQUOP expression
   43           | expression RELOP expression
   44           | error RELOP expression
   45           | expression ADDOP expression
   46           | error ADDOP expression
   47           | expression MULOP expression
   48           | error MULOP expression
   49           | NOTOP expression
   50           | error NOTOP expression
   51           | ADDOP expression
   52           | SIZEOP expression
   53           | INCDEC variable
   54           | variable INCDEC
   55           | error INCDEC
   56           | variable
   57           | variable LPAREN expression_list RPAREN
   58           | error LPAREN expression_list RPAREN
   59           | variable LPAREN error RPAREN
   60           | LENGTH LPAREN general_expression RPAREN
   61           | LENGTH LPAREN error RPAREN
   62           | NEW LPAREN general_expression RPAREN
   63           | NEW LPAREN error RPAREN
   64           | constant
   65           | LPAREN general_expression RPAREN
   66           | LPAREN standard_type RPAREN
   67           | LPAREN error RPAREN
   68           | listexpression

   69 variable: variable LBRACK general_expression RBRACK
   70         | error LBRACK general_expression RBRACK
   71         | variable LBRACK error RBRACK
   72         | variable DOT ID
   73         | error DOT ID
   74         | LISTFUNC LPAREN general_expression RPAREN
   75         | LISTFUNC LPAREN error RPAREN
   76         | decltype ID
   77         | error ID
   78         | THIS

   79 general_expression: general_expression COMMA general_expression
   80                   | error COMMA general_expression
   81                   | assignment

   82 assignment: variable ASSIGN assignment
   83           | error ASSIGN assignment
   84           | expression

   85 expression_list: general_expression
   86                | /* empty */

   87 constant: CCONST
   88         | ICONST
   89         | FCONST
   90         | SCONST

   91 listexpression: LBRACK expression_list RBRACK
   92               | LBRACK error RBRACK

   93 init_values: init_values COMMA init_value
   94            | error COMMA init_value
   95            | init_value

   96 class_declaration: CLASS ID class_body SEMI
   97                  | CLASS ID error SEMI

   98 class_body: parent LBRACE members_methods RBRACE
   99           | parent LBRACE error RBRACE

  100 parent: COLON ID
  101       | /* empty */

  102 members_methods: members_methods access member_or_method
  103                | access member_or_method

  104 access: PRIVATE COLON
  105       | PROTECTED COLON
  106       | PUBLIC COLON
  107       | /* empty */

  108 member_or_method: member
  109                 | method

  110 member: var_declaration
  111       | anonymous_union

  112 var_declaration: typename variabledefs SEMI
  113                | typename error SEMI

  114 variabledefs: variabledefs COMMA variabledef
  115             | error COMMA variabledef
  116             | variabledef

  117 variabledef: listspec ID dims
  118            | error ID dims

  119 anonymous_union: UNION union_body SEMI
  120                | UNION error SEMI

  121 union_body: LBRACE fields RBRACE
  122           | LBRACE error RBRACE

  123 fields: fields field
  124       | field

  125 field: var_declaration

  126 method: short_func_declaration

  127 short_func_declaration: short_par_func_header SEMI
  128                       | nopar_func_header SEMI

  129 short_par_func_header: func_header_start LPAREN parameter_types RPAREN
  130                      | func_header_start LPAREN error RPAREN

  131 func_header_start: typename listspec ID

  132 parameter_types: parameter_types COMMA typename pass_list_dims
  133                | error COMMA typename pass_list_dims
  134                | typename pass_list_dims

  135 pass_list_dims: REFER
  136               | listspec dims

  137 nopar_func_header: func_header_start LPAREN RPAREN

  138 union_declaration: UNION ID union_body SEMI
  139                  | UNION ID error SEMI

  140 global_var_declaration: typename init_variabledefs SEMI
  141                       | typename error SEMI

  142 init_variabledefs: init_variabledefs COMMA init_variabledef
  143                  | error COMMA init_variabledef
  144                  | init_variabledef

  145 init_variabledef: variabledef initializer

  146 func_declaration: short_func_declaration
  147                 | full_func_declaration

  148 full_func_declaration: full_par_func_header LBRACE decl_statements RBRACE
  149                      | full_par_func_header LBRACE error RBRACE
  150                      | nopar_class_func_header LBRACE decl_statements RBRACE
  151                      | nopar_class_func_header LBRACE error RBRACE
  152                      | nopar_func_header LBRACE decl_statements RBRACE
  153                      | nopar_func_header LBRACE error RBRACE
  154                      | error LBRACE decl_statements RBRACE

  155 full_par_func_header: class_func_header_start LPAREN parameter_list RPAREN
  156                     | class_func_header_start LPAREN error RPAREN
  157                     | func_header_start LPAREN parameter_list RPAREN
  158                     | func_header_start LPAREN error RPAREN
  159                     | error LPAREN parameter_list RPAREN

  160 class_func_header_start: typename listspec func_class ID

  161 func_class: ID METH

  162 parameter_list: parameter_list COMMA typename pass_variabledef
  163               | error COMMA typename pass_variabledef
  164               | typename pass_variabledef

  165 pass_variabledef: variabledef
  166                 | REFER ID

  167 nopar_class_func_header: class_func_header_start LPAREN RPAREN
  168                        | error LPAREN RPAREN

  169 decl_statements: declarations statements
  170                | declarations
  171                | statements
  172                | /* empty */

  173 declarations: declarations decltype typename variabledefs SEMI
  174             | declarations decltype typename error SEMI
  175             | decltype typename variabledefs SEMI
  176             | decltype typename error SEMI

  177 decltype: STATIC
  178         | /* empty */

  179 statements: statements statement
  180           | statement

  181 statement: expression_statement
  182          | if_statement
  183          | while_statement
  184          | for_statement
  185          | switch_statement
  186          | return_statement
  187          | io_statement
  188          | comp_statement
  189          | CONTINUE SEMI
  190          | BREAK SEMI
  191          | SEMI

  192 expression_statement: general_expression SEMI
  193                     | error SEMI

  194 if_statement: IF LPAREN general_expression RPAREN statement ELSE statement
  195             | IF LPAREN error RPAREN statement ELSE statement
  196             | IF LPAREN general_expression RPAREN error ELSE statement
  197             | IF LPAREN general_expression RPAREN statement

  198 while_statement: WHILE LPAREN general_expression RPAREN statement
  199                | WHILE LPAREN error RPAREN statement

  200 for_statement: FOR LPAREN optexpr SEMI optexpr SEMI optexpr RPAREN statement
  201              | FOR LPAREN error SEMI optexpr SEMI optexpr RPAREN statement
  202              | FOR LPAREN optexpr SEMI error SEMI optexpr RPAREN statement
  203              | FOR LPAREN optexpr SEMI optexpr SEMI error RPAREN statement

  204 optexpr: general_expression
  205        | /* empty */

  206 switch_statement: SWITCH LPAREN general_expression RPAREN switch_tail SWITCH LPAREN error RPAREN switch_tail

  207 switch_tail: LBRACE decl_cases RBRACE
  208            | LBRACE error RBRACE
  209            | single_casestatement

  210 decl_cases: declarations casestatements
  211           | declarations
  212           | casestatements
  213           | /* empty */

  214 casestatements: casestatements casestatement
  215               | casestatement

  216 casestatement: CASE constant COLON casestatement
  217              | CASE error COLON casestatement
  218              | CASE constant COLON statements
  219              | CASE error COLON statements
  220              | DEFAULT COLON statements

  221 single_casestatement: CASE constant COLON single_casestatement
  222                     | CASE error COLON single_casestatement
  223                     | CASE constant COLON statement
  224                     | CASE error COLON statement

  225 return_statement: RETURN optexpr SEMI
  226                 | RETURN error SEMI

  227 io_statement: CIN INP in_list SEMI
  228             | CIN INP error SEMI
  229             | COUT OUT out_list SEMI
  230             | COUT OUT error SEMI

  231 in_list: in_list INP in_item
  232        | error INP in_item
  233        | in_item

  234 in_item: variable

  235 out_list: out_list OUT out_item
  236         | error OUT out_item
  237         | out_item

  238 out_item: general_expression

  239 comp_statement: LBRACE decl_statements RBRACE
  240               | LBRACE error RBRACE

  241 main_function: main_header LBRACE decl_statements RBRACE
  242              | error LBRACE decl_statements RBRACE
  243              | main_header LBRACE error RBRACE

  244 main_header: INT MAIN LPAREN RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 11 26 28 30 36 38 40 42 44 46 48 50 55 58 59 61 63 67 70
    71 73 75 77 80 83 92 94 97 99 113 115 118 120 122 130 133 139 141
    143 149 151 153 154 156 158 159 163 168 174 176 193 195 196 199
    201 202 203 206 208 217 219 222 224 226 228 230 232 236 240 242
    243
TYPEDEF (258) 10 11
CHAR (259) 14
INT (260) 15 244
FLOAT (261) 16
STRING (262) 17
CLASS (263) 96 97
PRIVATE (264) 104
PROTECTED (265) 105
PUBLIC (266) 106
VOID (267) 18
STATIC (268) 177
UNION (269) 119 120 138 139
ENUM (270) 25 26
LIST (271) 19
CONTINUE (272) 189
BREAK (273) 190
IF (274) 194 195 196 197
ELSE (275) 194 195 196
WHILE (276) 198 199
FOR (277) 200 201 202 203
SWITCH (278) 206
CASE (279) 216 217 218 219 221 222 223 224
DEFAULT (280) 220
RETURN (281) 225 226
LENGTH (282) 60 61
NEW (283) 62 63
CIN (284) 227 228
COUT (285) 229 230
MAIN (286) 244
THIS (287) 78
ID (288) 10 11 13 25 26 29 30 31 72 73 76 77 96 97 100 117 118 131
    138 139 160 161 166
ICONST (289) 23 88
FCONST (290) 89
CCONST (291) 87
SCONST (292) 90
OROP (293) 37 38
ANDOP (294) 39 40
EQUOP (295) 41 42
RELOP (296) 43 44
ADDOP (297) 45 46 51
MULOP (298) 47 48
NOTOP (299) 49 50
INCDEC (300) 53 54 55
SIZEOP (301) 52
LISTFUNC (302) 74 75
LPAREN (303) 57 58 59 60 61 62 63 65 66 67 74 75 129 130 137 155 156
    157 158 159 167 168 194 195 196 197 198 199 200 201 202 203 206
    244
RPAREN (304) 57 58 59 60 61 62 63 65 66 67 74 75 129 130 137 155 156
    157 158 159 167 168 194 195 196 197 198 199 200 201 202 203 206
    244
SEMI (305) 10 11 25 26 96 97 112 113 119 120 127 128 138 139 140 141
    173 174 175 176 189 190 191 192 193 200 201 202 203 225 226 227
    228 229 230
DOT (306) 72 73
COMMA (307) 29 30 79 80 93 94 114 115 132 133 142 143 162 163
ASSIGN (308) 32 82 83
COLON (309) 100 104 105 106 216 217 218 219 220 221 222 223 224
LBRACK (310) 23 24 69 70 71 91 92
RBRACK (311) 23 24 69 70 71 91 92
REFER (312) 135 166
LBRACE (313) 27 28 35 36 98 99 121 122 148 149 150 151 152 153 154
    207 208 239 240 241 242 243
RBRACE (314) 27 28 35 36 98 99 121 122 148 149 150 151 152 153 154
    207 208 239 240 241 242 243
METH (315) 161
INP (316) 227 228 231 232
OUT (317) 229 230 235 236
LOWER_THAN_ELSE (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
global_declarations (66)
    on left: 2 3, on right: 1 2
global_declaration (67)
    on left: 4 5 6 7 8 9, on right: 2
typedef_declaration (68)
    on left: 10 11, on right: 4
typename (69)
    on left: 12 13, on right: 10 11 112 113 131 132 133 134 140 141
    160 162 163 164 173 174 175 176
standard_type (70)
    on left: 14 15 16 17 18, on right: 12 66
listspec (71)
    on left: 19 20, on right: 10 11 117 131 136 160
dims (72)
    on left: 21 22, on right: 10 21 117 118 136
dim (73)
    on left: 23 24, on right: 21
enum_declaration (74)
    on left: 25 26, on right: 5
enum_body (75)
    on left: 27 28, on right: 25
id_list (76)
    on left: 29 30 31, on right: 27 29
initializer (77)
    on left: 32 33, on right: 29 30 31 145
init_value (78)
    on left: 34 35 36, on right: 32 93 94 95
expression (79)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68, on right: 34 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 84
variable (80)
    on left: 69 70 71 72 73 74 75 76 77 78, on right: 53 54 56 57 59
    69 71 72 82 234
general_expression (81)
    on left: 79 80 81, on right: 60 62 65 69 70 74 79 80 85 192 194
    196 197 198 204 206 238
assignment (82)
    on left: 82 83 84, on right: 81 82 83
expression_list (83)
    on left: 85 86, on right: 57 58 91
constant (84)
    on left: 87 88 89 90, on right: 64 216 218 221 223
listexpression (85)
    on left: 91 92, on right: 68
init_values (86)
    on left: 93 94 95, on right: 35 93
class_declaration (87)
    on left: 96 97, on right: 6
class_body (88)
    on left: 98 99, on right: 96
parent (89)
    on left: 100 101, on right: 98 99
members_methods (90)
    on left: 102 103, on right: 98 102
access (91)
    on left: 104 105 106 107, on right: 102 103
member_or_method (92)
    on left: 108 109, on right: 102 103
member (93)
    on left: 110 111, on right: 108
var_declaration (94)
    on left: 112 113, on right: 110 125
variabledefs (95)
    on left: 114 115 116, on right: 112 114 173 175
variabledef (96)
    on left: 117 118, on right: 114 115 116 145 165
anonymous_union (97)
    on left: 119 120, on right: 111
union_body (98)
    on left: 121 122, on right: 119 138
fields (99)
    on left: 123 124, on right: 121 123
field (100)
    on left: 125, on right: 123 124
method (101)
    on left: 126, on right: 109
short_func_declaration (102)
    on left: 127 128, on right: 126 146
short_par_func_header (103)
    on left: 129 130, on right: 127
func_header_start (104)
    on left: 131, on right: 129 130 137 157 158
parameter_types (105)
    on left: 132 133 134, on right: 129 132
pass_list_dims (106)
    on left: 135 136, on right: 132 133 134
nopar_func_header (107)
    on left: 137, on right: 128 152 153
union_declaration (108)
    on left: 138 139, on right: 7
global_var_declaration (109)
    on left: 140 141, on right: 8
init_variabledefs (110)
    on left: 142 143 144, on right: 140 142
init_variabledef (111)
    on left: 145, on right: 142 143 144
func_declaration (112)
    on left: 146 147, on right: 9
full_func_declaration (113)
    on left: 148 149 150 151 152 153 154, on right: 147
full_par_func_header (114)
    on left: 155 156 157 158 159, on right: 148 149
class_func_header_start (115)
    on left: 160, on right: 155 156 167
func_class (116)
    on left: 161, on right: 160
parameter_list (117)
    on left: 162 163 164, on right: 155 157 159 162
pass_variabledef (118)
    on left: 165 166, on right: 162 163 164
nopar_class_func_header (119)
    on left: 167 168, on right: 150 151
decl_statements (120)
    on left: 169 170 171 172, on right: 148 150 152 154 239 241 242
declarations (121)
    on left: 173 174 175 176, on right: 169 170 173 174 210 211
decltype (122)
    on left: 177 178, on right: 76 173 174 175 176
statements (123)
    on left: 179 180, on right: 169 171 179 218 219 220
statement (124)
    on left: 181 182 183 184 185 186 187 188 189 190 191, on right:
    179 180 194 195 196 197 198 199 200 201 202 203 223 224
expression_statement (125)
    on left: 192 193, on right: 181
if_statement (126)
    on left: 194 195 196 197, on right: 182
while_statement (127)
    on left: 198 199, on right: 183
for_statement (128)
    on left: 200 201 202 203, on right: 184
optexpr (129)
    on left: 204 205, on right: 200 201 202 203 225
switch_statement (130)
    on left: 206, on right: 185
switch_tail (131)
    on left: 207 208 209, on right: 206
decl_cases (132)
    on left: 210 211 212 213, on right: 207
casestatements (133)
    on left: 214 215, on right: 210 212 214
casestatement (134)
    on left: 216 217 218 219 220, on right: 214 215 216 217
single_casestatement (135)
    on left: 221 222 223 224, on right: 209 221 222
return_statement (136)
    on left: 225 226, on right: 186
io_statement (137)
    on left: 227 228 229 230, on right: 187
in_list (138)
    on left: 231 232 233, on right: 227 231
in_item (139)
    on left: 234, on right: 231 232 233
out_list (140)
    on left: 235 236 237, on right: 229 235
out_item (141)
    on left: 238, on right: 235 236 237
comp_statement (142)
    on left: 239 240, on right: 188
main_function (143)
    on left: 241 242 243, on right: 1
main_header (144)
    on left: 244, on right: 241 243


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: global_declarations . main_function
    2 global_declarations: global_declarations . global_declaration

    error    shift, and go to state 4
    TYPEDEF  shift, and go to state 5
    CHAR     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRING   shift, and go to state 9
    CLASS    shift, and go to state 10
    VOID     shift, and go to state 11
    UNION    shift, and go to state 12
    ENUM     shift, and go to state 13
    ID       shift, and go to state 14

    global_declaration       go to state 15
    typedef_declaration      go to state 16
    typename                 go to state 17
    standard_type            go to state 18
    enum_declaration         go to state 19
    class_declaration        go to state 20
    short_func_declaration   go to state 21
    short_par_func_header    go to state 22
    func_header_start        go to state 23
    nopar_func_header        go to state 24
    union_declaration        go to state 25
    global_var_declaration   go to state 26
    func_declaration         go to state 27
    full_func_declaration    go to state 28
    full_par_func_header     go to state 29
    class_func_header_start  go to state 30
    nopar_class_func_header  go to state 31
    main_function            go to state 32
    main_header              go to state 33


state 3

    0 $accept: program $end .

    $default  accept


state 4

  154 full_func_declaration: error . LBRACE decl_statements RBRACE
  159 full_par_func_header: error . LPAREN parameter_list RPAREN
  168 nopar_class_func_header: error . LPAREN RPAREN
  242 main_function: error . LBRACE decl_statements RBRACE

    LPAREN  shift, and go to state 34
    LBRACE  shift, and go to state 35


state 5

   10 typedef_declaration: TYPEDEF . typename listspec ID dims SEMI
   11                    | TYPEDEF . typename listspec ID error SEMI

    CHAR    shift, and go to state 6
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 8
    STRING  shift, and go to state 9
    VOID    shift, and go to state 11
    ID      shift, and go to state 14
